# amcis-q-sec-core

./: .env.example  .pre-commit-config.yaml  AMCIS_AI_IMPROVEMENT_TASKLIST.md  AMCIS_COLLECTION_ASSESSMENT.md  COMMERCIAL_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_Q_SEC_CORE.md  INTEGRATION_ARCHITECTURE.md  MASTER_TEST_REPORT.md  Makefile  REWARD_HACKING_AUDIT.md  START_AMCIS.bat  START_AMCIS_SECURE.bat  TASK_COMPLETION_FINAL.md  TASK_COMPLETION_SUMMARY.md  amcis_server.py  docker-compose.yml  index.html  start_native.ps1  start_simple.bat  test_suite.py
AGENT_FINANCE/: Dockerfile  README.md  (+3 more)
AMCIS_NG/: ARCHITECTURE.md  Cargo.toml  Makefile  README.md
AMCIS_NG/crates/crypto-pqc/: Cargo.toml
AMCIS_NG/crates/crypto-pqc/src/: dilithium.rs  kyber.rs  lib.rs  utils.rs
AMCIS_NG/crates/zero-trust-core/: Cargo.toml
AMCIS_NG/crates/zero-trust-core/src/: lib.rs  policy.rs  policy_engine.rs
AMCIS_NG/dashboards/web/: index.html
AMCIS_NG/deployments/: docker-compose.yml
AMCIS_NG/deployments/k8s/: api-gateway.yaml  namespace.yaml
AMCIS_NG/deployments/monitoring/: prometheus.yml
AMCIS_NG/deployments/postgres/: 01_schema.sql
AMCIS_NG/docs/: entropica-agent-swarm.md  quantum-sovereign-kill-chain.md
AMCIS_NG/docs/architecture/: README.md
AMCIS_NG/entropica/: DEPLOY  POSSESS  README  SIGILS  SUMMON
AMCIS_NG/omega/: DEPLOY  OMEGA  SEED  immunity_1_bio.py  immunity_2_cog.py  immunity_3_trust.py  immunity_4_reality.py  immunity_5_temporal.py  immunity_6_substrate.py  immunity_7_entropy.py
AMCIS_NG/python/ai-ml/: main.py  requirements.txt
AMCIS_NG/python/ai-ml/amcis_ai/: __init__.py  anomaly_detector.py
AMCIS_NG/services/api-gateway/: Cargo.toml  Dockerfile
AMCIS_NG/services/api-gateway/src/: main.rs
AMCIS_NG/services/entropica-agent/: Cargo.toml  Dockerfile
AMCIS_NG/services/entropica-agent/src/: entropy.rs  game_theory.rs  main.rs  orchestra.rs  swarm.rs
AMCIS_NG/services/orchestra-agent/: Cargo.toml  Dockerfile  README.md
AMCIS_NG/services/orchestra-agent/src/: main.rs
AMCIS_NG/services/soc-orchestrator/: Dockerfile
AMCIS_NG/services/threat-intel/: Dockerfile
AMCIS_NG/simulations/quantum-kill-chain/: orchestrator.py
AMCIS_NG/tests/integration/: crypto_tests.rs
AMCIS_Q_SEC_CORE/: .access_control  ASSET_PREP_STATUS.md  COMMERCIAL_LICENSE.md  COMMERCIAL_README.md  Cargo.toml  MARKET_ANALYSIS.md  Makefile  PRICING_QUICK_REFERENCE.md  PROTOTYPE_STATUS.md  README.md  SALVAGE_MODE_COMPLETE.md  SECURITY_SETUP.md  demo.py  demo_amcis.db  demo_full.py  demo_paper_trading.py  demo_persistence.py  demo_quick.py  docker-compose.yml  pyproject.toml  requirements.txt
AMCIS_Q_SEC_CORE/.VAULT_MASTER/keys/: amcis_master.iv  amcis_master.key
AMCIS_Q_SEC_CORE/.github/workflows/: ci.yml
AMCIS_Q_SEC_CORE/.vault/: demo_secrets.enc
AMCIS_Q_SEC_CORE/ai_security/: __init__.py  amcis_output_validator.py  amcis_prompt_firewall.py  amcis_rag_provenance.py
AMCIS_Q_SEC_CORE/api_gateway/: Cargo.toml  Dockerfile  build.rs
AMCIS_Q_SEC_CORE/api_gateway/src/: config.rs  crypto.rs  main.rs  middleware.rs  tls.rs
AMCIS_Q_SEC_CORE/auth_service/: Dockerfile  go.mod  main.go
AMCIS_Q_SEC_CORE/cli/: __init__.py  amcis_main.py
AMCIS_Q_SEC_CORE/commercial/: __init__.py  license_generator.py  licensing.py  package_builder.py  watermark.py
AMCIS_Q_SEC_CORE/compliance/: __init__.py  compliance_engine.py  csf_controls.json  nist_csf.py  report_generator.py
AMCIS_Q_SEC_CORE/core/: __init__.py  amcis_anomaly_engine.py  amcis_error_utils.py  amcis_exceptions.py  amcis_integrity_monitor.py  amcis_kernel.py  amcis_redis.py  amcis_response_engine.py  amcis_trust_engine.py
AMCIS_Q_SEC_CORE/crypto/: __init__.py  amcis_cert_generator.py  amcis_encrypt.py  amcis_hybrid_pqc.py  amcis_hybrid_pqc_real.py  amcis_key_manager.py  amcis_merkle_log.py
AMCIS_Q_SEC_CORE/crypto_service/: Cargo.toml  Dockerfile
AMCIS_Q_SEC_CORE/crypto_service/src/: crypto.rs  hybrid.rs  keys.rs  lib.rs  service.rs
AMCIS_Q_SEC_CORE/dashboard/: __init__.py  alert_manager.py  amcis_base44_dashboard.html  amcis_dashboard.html  amcis_dashboard_server.py  launch_dashboard.py  metrics_collector.py  security_monitor.py  soul_circuit_biomedical_hub.html  test_report.html  tui_dashboard.py
AMCIS_Q_SEC_CORE/deception/: __init__.py  honeypot.py
AMCIS_Q_SEC_CORE/deployment/: Dockerfile  amcis_hardened_config.md  docker-compose.yml
AMCIS_Q_SEC_CORE/dlp/: __init__.py  dlp_engine.py
AMCIS_Q_SEC_CORE/docs/: SECURITY_ARCHITECTURE.md
AMCIS_Q_SEC_CORE/docs/api/: openapi.yaml
AMCIS_Q_SEC_CORE/docs/runbooks/: backup-restore.md  incident-response.md  key-rotation.md  scaling.md  troubleshooting.md
AMCIS_Q_SEC_CORE/edr/: __init__.py  amcis_file_integrity.py  amcis_memory_inspector.py  amcis_process_graph.py  amcis_syscall_monitor.py
AMCIS_Q_SEC_CORE/forensics/: __init__.py  evidence_collector.py  timeline.py
AMCIS_Q_SEC_CORE/infrastructure/: __init__.py  audit.py  database.py  vault.py
AMCIS_Q_SEC_CORE/integration/: api_routes.py  websocket_handlers.py
AMCIS_Q_SEC_CORE/network/: __init__.py  amcis_dns_tunnel_detector.py  amcis_microsegmentation.py  amcis_network_lockdown.bat  amcis_network_lockdown_enhanced.bat  amcis_port_surface_mapper.py
AMCIS_Q_SEC_CORE/secrets_mgr/: EXTENSION_SPEC.md  __init__.py  secrets_manager.py  vault_client.py
AMCIS_Q_SEC_CORE/secure_trading/: __init__.py  paper_exchange.py  risk_engine.py  secure_trading_agent.py  secure_trading_agent_hardened.py
AMCIS_Q_SEC_CORE/src/: usage_metering.py
AMCIS_Q_SEC_CORE/supply_chain/: __init__.py  amcis_dependency_validator.py  amcis_sbom_generator.py  amcis_signature_enforcer.py
AMCIS_Q_SEC_CORE/tests/: __init__.py  conftest.py  test_ai_security.py  test_crypto.py  test_crypto_production.py  test_crypto_real.py  test_edr.py  test_kernel.py  test_network.py  test_nist_csf.py  test_secure_trading.py  test_supply_chain.py  test_trust_engine.py  test_vault_client.py
AMCIS_Q_SEC_CORE/threat_intel/: __init__.py  ioc_matcher.py  stix_parser.py  threat_feed.py
AMCIS_Q_SEC_CORE/waf/: __init__.py  api_gateway.py  waf_engine.py
(+190 files in other folders)
