[workspace]
name = "amcis-ng"
members = [
    "services/api-gateway",
    "services/orchestra-agent",
    "crates/crypto-pqc",
    "crates/zero-trust-core",
]
version = "1.0.0-alpha"
edition = "2021"
authors = ["AMCIS Security Team <security@amcis.io>"]
description = "Advanced Multi-Layer Cyber Intelligence System - Quantum-Resilient Cybersecurity Platform"
license = "Apache-2.0"
repository = "https://github.com/amcis/amcis-ng"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"

# Crypto
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = { version = "0.8", features = ["std_rng"] }
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
hex = "0.4"

# PQC
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.6"
pqcrypto-traits = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "migrate"] }

# Network
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
