[workspace]
members = [
    "crypto_service",
    "api_gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AMCIS Development Team"]
license = "Proprietary"
repository = "https://github.com/amcis/amcis-q-sec-core"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
