[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amcis-q-sec-core"
version = "1.0.0"
description = "AMCIS Quantum-Secure Terminal Security Framework"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
authors = [
    {name = "AMCIS Security Team", email = "security@amcis.local"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "structlog>=23.0.0",
    "cryptography>=42.0.0",
    "pycryptodome>=3.20.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "urllib3>=2.1.0",
    "orjson>=3.9.0",
    "watchdog>=3.0.0",
    "PyYAML>=6.0.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]
docs = [
    "Sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
amcis = "AMCIS_Q_SEC_CORE.cli.amcis_main:main"

[project.urls]
Homepage = "https://amcis.security"
Documentation = "https://amcis.security/docs"
Repository = "https://github.com/amcis/amcis-q-sec-core"
Issues = "https://github.com/amcis/amcis-q-sec-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["AMCIS_Q_SEC_CORE"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    
    
    
    "-v"
]

[tool.coverage.run]
source = ["AMCIS_Q_SEC_CORE"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
