[package]
name = "amcis-orchestra-agent"
version = "1.0.0-alpha"
edition = "2021"
authors = ["AMCIS Security Team"]
description = "Central orchestration agent with human-in-the-loop oversight"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography for audit integrity
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
base64 = "0.22"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Messaging
lapin = "2.3"

# Internal
deadpool = "0.10"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.5"
tokio-util = "0.7"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
